{
    "name": "InputActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "e859b8f2-9b67-49d7-9a68-102083953e31",
            "actions": [
                {
                    "name": "PlayComposition",
                    "type": "Button",
                    "id": "b84d6b8e-8d86-45d2-9d83-13c07f549282",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PreviousInstrument",
                    "type": "Button",
                    "id": "7002627f-f3a4-427e-8033-50e86e5af6a8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextInstrument",
                    "type": "Button",
                    "id": "7b03d9b5-7667-4023-aa13-c98c010218ed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "f7437fe7-9c64-41bc-b854-1a34e4df9345",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightMouseDown",
                    "type": "Button",
                    "id": "defce7d3-e8e4-45cd-a959-17f566a47ec1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightMouseUp",
                    "type": "Button",
                    "id": "de5baf55-0227-4cd6-9f7a-1f783c9ce710",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "431a3d34-17df-4dd5-aa50-ffb20a87938a",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayComposition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5727f078-6ccb-4be1-87b5-0a75054f939c",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreviousInstrument",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a362752-ac6f-4b2c-884d-26748fa73ac6",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextInstrument",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d372842-4115-4428-a1cf-b603706a057c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "95fd267f-3ad5-4a6b-accf-2c2878da6c4f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "RightMouseDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41423f0b-84ee-43c2-9603-e420810e2fb7",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "RightMouseUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}